--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,8 @@
 /* Typography */
+:root{
+    --icon-size: 24px;
+    --icon-container-size: 48px;
+}
 
 html {
     font-size: 62.5%;
@@ -7,119 +11,53 @@ html {
 body {
     margin: 0;
     font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-size: 1.3rem;
 }
 
-/* navigation bar */
-.nav {
-    padding: 1.8rem 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: 1.4rem;
-}
-
-.nav__firstHalf,
-.nav__secondHalf {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav__firstHalf a {
-    color: black;
-    text-decoration: none;
-}
-
-.nav__firstHalf a:hover {
-    text-decoration: underline;
-}
-
-.nav__firstHalf a:last-child {
-    margin: 0 2rem;
-}
-
-/* Icon */
-.icon-container {
-    align-items: center;
+/* icon */
+.icon-container{
+    margin-top: 16px;
+    width: var(--icon-container-size);
+    height: var(--icon-container-size);
+    background: rgba(241, 243, 244, 1);
     border-radius: 100%;
-    cursor: pointer;
     display: inline-flex;
-    height: 45px;
     justify-content: center;
-    margin-right: 1.3rem;
-    width: 45px;
-}
-
-.icon-container:hover {
-    background: lightgrey;
-}
-
-.icon {
-    width: 25px;
-    height: 25px;
-}
-
-/* Avata */
-.avata-container{
-    align-items: center;
-    border-radius: 100%;
-    cursor: pointer;
-    display: inline-flex;
-    height: 50px;
-    justify-content: center;
-    width: 50px;
-}
-
-.avata-container:hover{
-    background: lightgrey;
-}
-
-.avata {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-}
-
-/* logo */
-.logo{
-    display: flex;
-    justify-content: center;
-}
-
-.logo__image{
-    width: 100%;
-    max-width: 500px;
-}
-
-/* input */
-.input{
-    outline: 0;
-    font-size: 1.6rem;
-    margin: 0 .5rem 0 2rem;
-    flex-grow: 1;
-    border: 0;
-}
-.input-group{
-    width: 100%;
-    display: flex;
-    border: 1px solid lightgrey;
-    padding: 1rem 2rem;
-    border-radius: 30px;
-    box-shadow: 0 0 10px 0 lightgrey;
     align-items: center;
 }
 
-.input-group__loupe-icon{
-    fill: lightgreen;
+.icon{
+    width: var(--icon-size);
+    height: var(--icon-size);
 }
 
-.input-group__loupe-icon{
-    width: 2rem;
-    height: 2rem;
+
+/* badge */
+.badge{
+    position: relative;
+    width: 112px;
+    height: 112px;
+    border-radius: 5px;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.input-group__google-mic{
-    width: 4rem;
-    height: 4rem;
+.badge__icon{
+    opacity: 0;
+    position: absolute;
+    top: 5px;
+    right: 1px;
+}
+
+.badge:hover{
+    background-color: #e8e8e9;
+}
+
+.badge:hover .badge__icon{
+    opacity: 1;
+}
+
+.delay-1s{
+    transition-delay: 1s;
 }
