reponsive input-group

--- a/components/input.html
+++ b/components/input.html
@@ -1,5 +1,5 @@
 <div class="input-group">
-    <img class="icon input-group__loupe-icon" src="images/loupe.png" alt="">
-    <input class="input" type="text" placeholder="Search Google or type a URL" autocomplete="off" maxlength="2024">
-    <img class="icon input-group__google-mic" src="images/google-mic.png" alt="">
+    <img class="icon icon__loupe" src="images/loupe.svg" alt="">
+    <input class="input" type="text" placeholder="Search Google or type a URL" maxlength="2024" autocomplete="off">
+    <img class="icon" src="images/google_mic.svg" alt="">
 </div>
