--- a/style/style.css
+++ b/style/style.css
@@ -16,14 +16,14 @@ body {
 
 /* icon */
 .icon-container{
-    margin-top: 16px;
-    width: var(--icon-container-size);
-    height: var(--icon-container-size);
+    align-items: center;
     background: rgba(241, 243, 244, 1);
     border-radius: 100%;
     display: inline-flex;
+    height: var(--icon-container-size);
     justify-content: center;
-    align-items: center;
+    margin-top: 16px;
+    width: var(--icon-container-size);
 }
 
 .icon{
@@ -31,23 +31,39 @@ body {
     height: var(--icon-size);
 }
 
+.icon__loupe{
+    width: 15px;
+    height: 15px;
+}
 
 /* badge */
 .badge{
-    position: relative;
-    width: 112px;
-    height: 112px;
+    align-items: center;
     border-radius: 5px;  
+    cursor: pointer;
     display: flex;
     flex-direction: column;
+    height: 112px;
+    position: relative;
+    width: 112px;
+}
+
+.badge__icon-container{
+    border-radius: 100%;
+    display: inline-flex;
     align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 5px;
+    right: 2px;
+    width: 25px;
+    height: 25px;
 }
 
 .badge__icon{
     opacity: 0;
-    position: absolute;
-    top: 5px;
-    right: 1px;
+    width: 20px;
+    height: 20px;
 }
 
 .badge:hover{
@@ -58,6 +74,34 @@ body {
     opacity: 1;
 }
 
-.delay-1s{
-    transition-delay: 1s;
+.badge__icon-container:hover{
+    background-color: #d3d3d5;
+}
+
+/* input */
+.input-group{
+    padding: 14px 20px;
+    display: flex;
+    max-width: 337px;
+    border-radius: 30px;
+    box-shadow: 0 0 10px 0 lightgrey;
+}
+
+.input-group .input{
+    flex-grow: 1;
+    margin-left: 1rem;
+    border: 0;
+    outline: 0;
+}
+
+@media screen and (min-width: 560px){
+    .input-group{
+        max-width: 450px;
+    }
+}
+
+@media screen and (min-width: 672px){
+    .input-group{
+        max-width: 562px;
+    }
 }
