finish badge and input-group

--- a/components/badge.html
+++ b/components/badge.html
@@ -1,9 +1,11 @@
 <div class="badge">
-    <span class="badge__icon delay-1s">
-        <img class="icon" src="images/options.svg" alt="facebook logo">
-    </span>
-    <span class="icon-container">
-        <img class="icon" src="images/youtube.svg" alt="facebook logo">
-    </span>
-    <p>Youtube</p>
+    <a href="#">
+        <span class="badge__icon-container">
+            <img class="badge__icon" src="images/options.svg" alt="facebook logo">
+        </span>
+        <span class="icon-container">
+            <img class="icon" src="images/youtube.svg" alt="facebook logo">
+        </span>
+        <p>Youtube</p>
+    </a>
 </div>
