--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,11 @@ body {
     font-size: 1.3rem;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 /* icon */
 .icon-container{
     align-items: center;
@@ -31,7 +36,7 @@ body {
     height: var(--icon-size);
 }
 
-.icon__loupe{
+.icon-loupe{
     width: 15px;
     height: 15px;
 }
@@ -85,6 +90,7 @@ body {
     max-width: 337px;
     border-radius: 30px;
     box-shadow: 0 0 10px 0 lightgrey;
+    align-items: center;
 }
 
 .input-group .input{
@@ -92,6 +98,7 @@ body {
     margin-left: 1rem;
     border: 0;
     outline: 0;
+    align-self: flex-end;
 }
 
 @media screen and (min-width: 560px){
@@ -104,4 +111,11 @@ body {
     .input-group{
         max-width: 562px;
     }
+}
+
+/* grid */
+.grid-2x3{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
