--- a/components/logo.html
+++ b/components/logo.html
@@ -1,3 +1,3 @@
-<section class="logo">
-    <img class="logo__image" src="images/google.gif" alt="seasonal Google logo">
-</section>
+<div class="container logo">
+    <img src="images/google.gif" alt="">
+</div>
