--- a/style/style.css
+++ b/style/style.css
@@ -159,3 +159,53 @@ a{
     max-width: 500px;
     justify-self: center;
 }
+
+/* avata */
+.avata{
+    width: calc(var(--icon-container-size) - 10px);
+    height: calc(var(--icon-container-size) - 10px);
+    border-radius: 100%;
+}
+
+/* list */
+.list{
+    width: 100%;
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 1rem 0 0;
+    margin: 1rem;
+}
+
+.list__item:first-child{
+    margin: 0 1.5rem 0 0;
+}
+
+.left-list, 
+.right-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-list__item:first-child{
+    margin: 0 2rem 0 0;
+}
+
+.left-list__item:hover{
+    text-decoration: underline;
+}
+
+.right-list__item{
+    margin: 0 1rem 0 0;
+    cursor: pointer;
+}
+
+.right-list .icon-container{
+    background: none;
+}
+
+.right-list .icon-container:hover{
+    background: rgba(241, 243, 244, 1);
+}
