--- a/style/style.css
+++ b/style/style.css
@@ -87,7 +87,6 @@ a{
 .input-group{
     padding: 14px 20px;
     display: flex;
-    width: 100%;
     border-radius: 30px;
     box-shadow: 0 0 10px 0 lightgrey;
     align-items: center;
@@ -117,6 +116,7 @@ a{
 .container{
     max-width: 337px;
     display: flex;
+    flex-direction: column;
     margin: 0 auto;
 }
 
@@ -178,8 +178,8 @@ a{
     margin: 1rem;
 }
 
-.list__item:first-child{
-    margin: 0 1.5rem 0 0;
+.list__item{
+    margin: 0 1rem 0 0;
 }
 
 .left-list, 
